# ha

./: .gitignore  .pre-commit-config.yaml  Dockerfile  HA-Collection.postman_collection.json  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.cfg
app/: Dockerfile  pyproject.toml
app/config/: settings.py  urls.py
app/socia/: apps.py  models.py  serializers.py  urls.py
app/socia/api/: urls.py  views.py
app/socia/migrations/: 0001_initial.py
db/: Dockerfile  ddl.sql
