[tool.black]
target-version = ['py310']
skip-string-normalization = true
skip-magic-trailing-comma = true
preview = true

[tool.pytest.ini_options]
asyncio_mode = 'auto'
markers = [
    "authentication",
    "openapi",
    "oauth",
    "fastapi_users",
    "jwt",
    "manager",
    "router",
    "asyncio",
]

[tool.ruff]
select = [
    "F", # Pyflakes
    "E", # Pycodestyle
    "W",
    "I001", # isort
    "D", # docstyle
    "N", # naiming
    "UP", # pyupgrade
    "PD", # pandas
    "PGH", # pygrep-hooks
    "TRY", # tryceratops
    "RUF",
    "FURB",
    "AIR",
    "C90"
]
format = "grouped"
max-complexity = 5

[tool.mypy]
python_version = '3.10'
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    '.env',
    '.venv',
    'migrations',
    'tests',
]

# mypy per-module options:
#[[tool.mypy.overrides]]
#module = "mycode.foo.*"
#disallow_untyped_defs = true

[tool.poetry]
name = "ha"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
