
[tool.ruff]
select = [
    "F", # Pyflakes
    "E", # Pycodestyle
    "W",
    "I001", # isort
    "D", # docstyle
    "N", # naiming
    "UP", # pyupgrade
    "PD", # pandas
    "PGH", # pygrep-hooks
    "TRY", # tryceratops
    "RUF",
    "FURB",
    "AIR",
    "C90"
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.mypy]
python_version = '3.10'
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = [
    '.env',
    '.venv',
    'migrations',
    'tests',
]

[tool.poetry]
name = "ha"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
wemake-python-styleguide = "^0.18.0"
black = "^23.12.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
